# syscat

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
core/: Cargo.toml
core/src/: cpu.rs  disk.rs  lib.rs  memory.rs  network.rs  process.rs  system.rs  user.rs
gui/: package-lock.json  package.json
gui/src/: App.vue  main.js
gui/src-tauri/: tauri.conf.json
gui/src/layouts/: Default.vue
src/: main.rs
