[package]
name = "syscat"
version = "0.1.0"
edition = "2021"
authors = ["shellrow <shellrow@protonmail.com>"]
description = "Cross-platform system information tool"
repository = "https://github.com/shellrow/nesmap"
readme = "README.md"
keywords = ["os","network","cli","cross-platform"]
categories = ["os", "network-programming", "filesystem", "api-bindings"]
license = "MIT"

[[bin]]
name = "syscat"

[dependencies]
