[package]
name = "syscat-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "syscat_core"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.26.6"
netstat2 = "0.9.1"
default-net = "0.11.0"
#reqwest = { version = "0.11.12", features = ["blocking", "json"] }
